plugins {
  id 'org.springframework.boot' version '2.3.4.RELEASE'
  id 'io.spring.dependency-management' version '1.0.10.RELEASE'
  id 'java'
}

sourceCompatibility = '11'

repositories {
  mavenCentral()
}

dependencies {
	implementation('org.springframework.boot:spring-boot-starter-security')
	implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
	implementation('org.springframework.boot:spring-boot-starter-web')
	implementation('org.springframework.boot:spring-boot-starter-tomcat')
	implementation('org.springframework.boot:spring-boot-starter-jdbc')
	implementation('org.springframework.boot:spring-boot-starter-websocket')
	implementation('org.springframework.boot:spring-boot-devtools')
	implementation('org.springframework.cloud:spring-cloud-config-server')
	implementation('com.fasterxml.jackson.dataformat:jackson-dataformat-yaml')
	implementation('com.hierynomus:sshj:0.21.1')
	implementation('com.h2database:h2')
	
	compileOnly('org.springframework.boot:spring-boot-configuration-processor')
	
	implementation('org.projectlombok:lombok')
	annotationProcessor('org.projectlombok:lombok')
}

dependencyManagement {
  imports {
    mavenBom "org.springframework.cloud:spring-cloud-dependencies:Hoxton.SR8"
  }
}
